<resources>
    <string name="app_name">Projectapp</string>
    <string name="log_in">Log In</string>
    <string name="bone_s">Bone\'s</string>
    <string name="to_sign_up">Click here to Sign Up!</string>
    <string name="user_name">user name</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="name">Name</string>
    <string name="coupon_item">Coupons</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="news_feed_fragment">News Feed</string>
    <string name="family_club">Bone\'s Family Club</string>
    <string name="description">Description</string>
    <string name="price">Price KR-,</string>
    <string name="food_image">food Image</string>
    <string name="add_food">Add Food</string>
    <string name="add_drink">Add Drink</string>
    <string name="weight">Enter Weight (grams)</string>
    <string name="capacity">Enter Capacity (ml)</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter password</string>
    <string name="password_v_hint">Enter password again</string>
    <string name="user_email">email@smt.com</string>
    <string name="logged_in_as">You are logged in as:</string>
    <string name="empty"></string>
    <string name="meal_name">Meal Name: </string>
    <string name="meal_cate">Category: </string>
    <string name="tutorial">Tutorial: </string>
    <string name="currency">DKK</string>
    <string name="sign_out">Sign Out</string>
    <string name="instructions_click">Click to view instructions</string>
    <string name="instructions">Instructions: </string>
    <string name="category">Category: </string>


</resources>
