<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bonesWhite"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/bonesDarkRed"
        android:textColorHint="@color/bonesDarkRed"></EditText>

    <EditText
        android:id="@+id/edit_food_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        android:textColor="@color/bonesDarkRed"
        android:textColorHint="@color/bonesDarkRed"
        android:inputType="textMultiLine"></EditText>

    <EditText
        android:id="@+id/edit_food_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/price"
        android:inputType="number|numberDecimal"

        android:textColor="@color/bonesDarkRed"
        android:textColorHint="@color/bonesDarkRed"></EditText>

    <EditText
        android:id="@+id/edit_food_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/weight"

        android:inputType="number|numberDecimal"

        android:textColor="@color/bonesDarkRed"
        android:textColorHint="@color/bonesDarkRed"></EditText>
</LinearLayout>