<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
app:cardBackgroundColor="@color/bonesWhite"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_drink_name"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/arvo_bold"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/bonesWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_drink_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_drink_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"

            android:fontFamily="sans-serif-condensed-light"
            android:gravity="left"
            android:text="@string/description"
            android:textColor="@color/bonesBeige"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_drink_cap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_drink_desc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"

            android:fontFamily="sans-serif-condensed-light"
            android:gravity="left"
            android:text="@string/capacity"
            android:textColor="@color/bonesBeige"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_drink_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_drink_cap"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/tv_currency"
            android:fontFamily="@font/arvo_bold"
            android:text="@string/price"
            android:textColor="@color/bonesBeige"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_drink_cap"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/arvo_bold"
            android:text="DKK"
            android:textColor="@color/bonesBeige"
            android:textSize="30sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>